<resources>
    <string name="app_name">IstoryaAI</string>
    <string name="app_name_logo">IstoryAILogo</string>
    <string name="book_person_svg">Book Person SVG</string>
    <string name="translation_svg">Translation SVG</string>
    <string name="story_generation_card_title">Generate Story</string>
    <string name="story_generation_card_body1">Stories for Grade 1 – 3</string>
    <string name="translation_card_title">Translation</string>
    <string name="translation_card_body1">Cebuano to English</string>
    <string name="translation_card_body2">English to Cebuano</string>
    <string name="start_quiz_btn">Start Comprehension Quiz</string>
    <string name="story_choice_toolbar">Story Choice</string>
    <string name="generate_random_btn">Generate Random Story</string>
    <string name="generate_topic_btn">Generate Story</string>
    <string name="topic_hint_textfield">Topic</string>
    <string name="menu_content">Content</string>
    <string name="menu_quiz">Quiz</string>
    <string name="translate_btn">Translate</string>
    <string name="english_switch">English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>